
[tool.poetry]
name =  "nadlan_workflows"
version = "0.0.1"
description = "FastAPI project deployed on Vercel"
readme = "README.md"
authors = ["Inbar"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
# Static Analysis
ruff = "^0.3.0"
mypy = "^1.8.0"

# Tests
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"
polyfactory = "^2.15.0"

[tool.poetry.group.server.dependencies]
uvicorn = "^0.29.0"
fastapi = "^0.110.0"

[project.urls]
Source = "https://github.com/marcorichetta/fastapi-vercel"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pydocstyle
    #"D",
    # pycodestyle
    "E",
    "W",
    "N", # pep8-naming
    # isort
    "I001",
    "I002",
    # pandas
    "PD"
]

